adult/logs/create_fluctuations_15091918_708.out
SLURM_JOBID:  15092629
SLURM_ARRAY_TASK_ID:  708
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 9, 0.002, 160)


